style(whole project): update .editorconfig
Signed-off-by: Hien Hoang <hienhoang2702@gmail.com>