@@ -37,6 +37,7 @@ import java.util.stream.Stream;
 @AllArgsConstructor(onConstructor = @__(@Autowired))
 @Log4j2
 public class InventoryItemServiceImpl implements InventoryItemService {
+
     public static final String module = InventoryItemServiceImpl.class.getName();
 
     private InventoryItemRepo inventoryItemRepo;
@@ -81,28 +82,37 @@ public class InventoryItemServiceImpl implements InventoryItemService {
 //        Product product = productService.findByProductId(inventoryItems.getProductId());
 //        Facility facility = facilityService.findFacilityById(inventoryItems.getFacilityId());
 
-        Map<String, Product> productMap = productRepo.findAllByProductIdIn(Arrays.stream(inventoryItemsInput.getInventoryItems())
-            .map(ImportInventoryItemInputModel::getProductId)
-            .collect(Collectors.toList()))
-            .stream().collect(Collectors.toMap(Product::getProductId, p -> p));
+        Map<String, Product> productMap = productRepo
+            .findAllByProductIdIn(Arrays
+                                      .stream(inventoryItemsInput.getInventoryItems())
+                                      .map(ImportInventoryItemInputModel::getProductId)
+                                      .collect(Collectors.toList()))
+            .stream()
+            .collect(Collectors.toMap(Product::getProductId, p -> p));
 
-        Map<String, Facility> facilityMap = facilityRepo.findAllByFacilityIdIn(Arrays.stream(inventoryItemsInput.getInventoryItems())
-            .map(ImportInventoryItemInputModel::getFacilityId)
-            .collect(Collectors.toList()))
-            .stream().collect(Collectors.toMap(Facility::getFacilityId, f -> f));
+        Map<String, Facility> facilityMap = facilityRepo
+            .findAllByFacilityIdIn(Arrays
+                                       .stream(inventoryItemsInput.getInventoryItems())
+                                       .map(ImportInventoryItemInputModel::getFacilityId)
+                                       .collect(Collectors.toList()))
+            .stream()
+            .collect(Collectors.toMap(Facility::getFacilityId, f -> f));
 
 //        if (product == null || facility == null) {
 //            return null;
 //        }
 
-        Map<List<String>, ProductFacility> productFacilityMap = productFacilityRepo.findByProductIdInAndFacilityIdIn(
-            new ArrayList<>(productMap.keySet()), new ArrayList<>(facilityMap.keySet()))
+        Map<List<String>, ProductFacility> productFacilityMap = productFacilityRepo
+            .findByProductIdInAndFacilityIdIn(
+                new ArrayList<>(productMap.keySet()), new ArrayList<>(facilityMap.keySet()))
             .stream()
-            .collect(Collectors.toMap(productFacility -> Arrays.asList(productFacility.getProductId(),
+            .collect(Collectors.toMap(productFacility -> Arrays.asList(
+                productFacility.getProductId(),
                 productFacility.getFacilityId()), o -> o));
 
         for (ImportInventoryItemInputModel inventoryItem : inventoryItemsInput.getInventoryItems()) {
-            ProductFacility productFacility = productFacilityMap.computeIfAbsent(Arrays.asList(inventoryItem.getProductId(),
+            ProductFacility productFacility = productFacilityMap.computeIfAbsent(Arrays.asList(
+                inventoryItem.getProductId(),
                 inventoryItem.getFacilityId()), k -> {
                 ProductFacility pf = new ProductFacility();
                 pf.setProductId(inventoryItem.getProductId());
@@ -112,10 +122,11 @@ public class InventoryItemServiceImpl implements InventoryItemService {
                 return pf;
             });
             productFacility.setLastInventoryCount(productFacility.getLastInventoryCount() +
-                inventoryItem.getQuantityOnHandTotal());
+                                                  inventoryItem.getQuantityOnHandTotal());
         }
 
-        List<InventoryItem> inventoryItems = Arrays.stream(inventoryItemsInput.getInventoryItems())
+        List<InventoryItem> inventoryItems = Arrays
+            .stream(inventoryItemsInput.getInventoryItems())
             .map(inventoryItemInput -> {
                 Product product = productMap.get(inventoryItemInput.getProductId());
 
@@ -129,7 +140,8 @@ public class InventoryItemServiceImpl implements InventoryItemService {
             })
             .collect(Collectors.toList());
 
-        Map<Facility, List<InventoryItem>> facilityToInventoryItems = inventoryItems.stream()
+        Map<Facility, List<InventoryItem>> facilityToInventoryItems = inventoryItems
+            .stream()
             .collect(Collectors.groupingBy(InventoryItem::getFacility));
 
         facilityToInventoryItems.forEach((facility, inventoryItemsList) -> {
@@ -170,6 +182,7 @@ public class InventoryItemServiceImpl implements InventoryItemService {
     @Transactional
     @org.springframework.transaction.annotation.Transactional
     public String exportInventoryItems(ExportInventoryItemsInputModel inventoryItemsInput) {
+
         Date now = new Date();
 
 //        List<InventoryItem> inventoryItems = inventoryItemRepo.findAll();// to be improved, find by (productId, facilityId)
@@ -193,7 +206,8 @@ public class InventoryItemServiceImpl implements InventoryItemService {
         Shipment shipment = createAndSaveShipment();
 
         List<ShipmentItem> shipmentItems = new ArrayList<>();
-        StatusItem statusItem = statusItemRepo.findById("SHIPMENT_ITEM_CREATED")
+        StatusItem statusItem = statusItemRepo
+            .findById("SHIPMENT_ITEM_CREATED")
             .orElseThrow(NoSuchElementException::new);
 
         Map<String, ProductPrice> productPriceMap = buildProductPriceMap(queryProducts);
@@ -214,7 +228,7 @@ public class InventoryItemServiceImpl implements InventoryItemService {
             OrderHeader orderHeader = orderHeaderMap.get(orderItem.getOrderId());
 
             log.info("exportInventoryItems, productId = " + productId + ", facilityId = " + facilityId + ", list = " +
-                inventoryItemsMap.size());
+                     inventoryItemsMap.size());
 
             ProductFacility productFacility = productFacilityMap.get(Arrays.asList(facilityId, productId));
             if (productFacility == null) {
@@ -237,7 +251,8 @@ public class InventoryItemServiceImpl implements InventoryItemService {
                     inventoryItemDetails.add(inventoryItemDetail);
                     inventoryItem.setQuantityOnHandTotal(inventoryItem.getQuantityOnHandTotal() - quantity);
 
-                    ShipmentItem shipmentItem = createShipmentItem(shipment,
+                    ShipmentItem shipmentItem = createShipmentItem(
+                        shipment,
                         statusItem,
                         quantity,
                         orderItem,
@@ -251,7 +266,8 @@ public class InventoryItemServiceImpl implements InventoryItemService {
                         inventoryItem,
                         -inventoryItem.getQuantityOnHandTotal(),
                         orderItem);
-                    ShipmentItem shipmentItem = createShipmentItem(shipment,
+                    ShipmentItem shipmentItem = createShipmentItem(
+                        shipment,
                         statusItem,
                         inventoryItem.getQuantityOnHandTotal(),
                         orderItem,
@@ -260,7 +276,7 @@ public class InventoryItemServiceImpl implements InventoryItemService {
                     shipmentItems.add(shipmentItem);
 
                     orderItem.setExportedQuantity(orderItem.getExportedQuantity() +
-                        inventoryItem.getQuantityOnHandTotal());
+                                                  inventoryItem.getQuantityOnHandTotal());
                     inventoryItemDetails.add(inventoryItemDetail);
                     inventoryItem.setQuantityOnHandTotal(0);
                     quantity -= inventoryItem.getQuantityOnHandTotal();
@@ -269,7 +285,8 @@ public class InventoryItemServiceImpl implements InventoryItemService {
 
             productFacility.setLastInventoryCount(Math.max(totalCount, 0));
 
-            InvoiceItem invoiceItem = new InvoiceItem(new InvoiceItem.Id(invoice.getInvoiceId(), i + ""),
+            InvoiceItem invoiceItem = new InvoiceItem(
+                new InvoiceItem.Id(invoice.getInvoiceId(), i + ""),
                 InvoiceItemType.SALES_INVOICE_PRODUCT_ITEM,
                 productPriceMap.get(productId).getPrice() * quantity,
                 "CUR_vnd",
@@ -277,19 +294,21 @@ public class InventoryItemServiceImpl implements InventoryItemService {
                 now);
             invoiceItems.add(invoiceItem);
 
-            OrderItemBilling orderItemBilling = new OrderItemBilling(new OrderItemBilling.Id(orderItem.getOrderId(),
+            OrderItemBilling orderItemBilling = new OrderItemBilling(new OrderItemBilling.Id(
+                orderItem.getOrderId(),
                 orderItem.getOrderItemSeqId(),
                 invoice.getInvoiceId(),
                 invoiceItem.getId().getInvoiceItemSeqId()),
-                quantity,
-                invoiceItem.getAmount(), "CUR_vnd", now, now);
+                                                                     quantity,
+                                                                     invoiceItem.getAmount(), "CUR_vnd", now, now);
             orderItemBillings.add(orderItemBilling);
         }
 
         shipmentItems = shipmentItemRepo.saveAll(shipmentItems);
 
         shipmentItemStatusRepo.saveAll(
-            shipmentItems.stream()
+            shipmentItems
+                .stream()
                 .map(shipmentItem -> new ShipmentItemStatus(null, shipmentItem, statusItem, now, null))
                 .collect(Collectors.toList()));
 
@@ -310,17 +329,20 @@ public class InventoryItemServiceImpl implements InventoryItemService {
     }
 
     private void updateInvoiceStatus(Date updateDate, Invoice invoice) {
+
         invoiceStatusRepo.save(new InvoiceStatus(null, invoice.getInvoiceId(),
-            com.hust.baseweb.applications.accounting.document.StatusItem.INVOICE_CREATED,
-            updateDate, null,
-            updateDate,
-            updateDate));
+                                                 com.hust.baseweb.applications.accounting.document.StatusItem.INVOICE_CREATED,
+                                                 updateDate, null,
+                                                 updateDate,
+                                                 updateDate));
     }
 
     private Invoice createInvoice(Date createDate, Map<String, OrderHeader> orderHeaderMap) {
+
         OrderHeader orderHeader = new ArrayList<>(orderHeaderMap.values()).get(0);
         assert orderHeader != null;
-        return invoiceService.save(new Invoice(null,
+        return invoiceService.save(new Invoice(
+            null,
             InvoiceType.SALES_INVOICE,
             com.hust.baseweb.applications.accounting.document.StatusItem.INVOICE_CREATED,
             createDate,
@@ -335,18 +357,22 @@ public class InventoryItemServiceImpl implements InventoryItemService {
 
     @NotNull
     private Map<String, ProductPrice> buildProductPriceMap(List<Product> products) {
+
         Date now = new Date();
-        return productPriceRepo.findAllByProductInAndThruDateNullOrThruDateAfter(products, now)
+        return productPriceRepo
+            .findAllByProductInAndThruDateNullOrThruDateAfter(products, now)
             .stream()
             .collect(Collectors.toMap(productPrice -> productPrice.getProduct().getProductId(), p -> p));
     }
 
     @NotNull
-    private ShipmentItem createShipmentItem(Shipment shipment,
-                                            StatusItem statusItem,
-                                            int quantity,
-                                            OrderItem orderItem,
-                                            OrderHeader orderHeader, InventoryItem inventoryItem) {
+    private ShipmentItem createShipmentItem(
+        Shipment shipment,
+        StatusItem statusItem,
+        int quantity,
+        OrderItem orderItem,
+        OrderHeader orderHeader, InventoryItem inventoryItem) {
+
         ShipmentItem shipmentItem = new ShipmentItem();
         shipmentItem.setShipment(shipment);
         shipmentItem.setFacility(inventoryItem.getFacility());
@@ -363,15 +389,20 @@ public class InventoryItemServiceImpl implements InventoryItemService {
 
     @NotNull
     private Map<String, OrderHeader> buildOrderHeaderMap(ExportInventoryItemsInputModel inventoryItemsInput) {
-        return orderHeaderRepo.findAllByOrderIdIn(Stream.of(inventoryItemsInput.getInventoryItems())
-            .map(ExportInventoryItemInputModel::getOrderId).distinct()
-            .collect(Collectors.toList()))
+
+        return orderHeaderRepo
+            .findAllByOrderIdIn(Stream
+                                    .of(inventoryItemsInput.getInventoryItems())
+                                    .map(ExportInventoryItemInputModel::getOrderId)
+                                    .distinct()
+                                    .collect(Collectors.toList()))
             .stream()
             .collect(Collectors.toMap(OrderHeader::getOrderId, orderHeader -> orderHeader));
     }
 
     @NotNull
     private Shipment createAndSaveShipment() {
+
         Shipment shipment = new Shipment();
         shipment.setShipmentTypeId("SALES_SHIPMENT");
         shipment = shipmentRepo.save(shipment);
@@ -379,8 +410,10 @@ public class InventoryItemServiceImpl implements InventoryItemService {
     }
 
     private void updateOrderHeaderAllExportedStatus(ExportInventoryItemsInputModel inventoryItemsInput) {
+
         if (inventoryItemsInput.getInventoryItems().length > 0) {
-            OrderHeader orderHeader = orderHeaderRepo.findById(inventoryItemsInput.getInventoryItems()[0].getOrderId())
+            OrderHeader orderHeader = orderHeaderRepo
+                .findById(inventoryItemsInput.getInventoryItems()[0].getOrderId())
                 .orElseThrow(NoSuchElementException::new);
             List<OrderItem> orderItems = orderItemRepo.findAllByOrderId(orderHeader.getOrderId());
             boolean exported = true;
@@ -397,7 +430,9 @@ public class InventoryItemServiceImpl implements InventoryItemService {
 
     @NotNull
     private List<Product> buildProducts(ExportInventoryItemsInputModel inventoryItemsInput) {
-        List<String> productIds = Stream.of(inventoryItemsInput.getInventoryItems())
+
+        List<String> productIds = Stream
+            .of(inventoryItemsInput.getInventoryItems())
             .map(ExportInventoryItemInputModel::getProductId)
             .collect(Collectors.toList());
         return productRepo.findAllByProductIdIn(productIds);
@@ -405,7 +440,9 @@ public class InventoryItemServiceImpl implements InventoryItemService {
 
     @NotNull
     private List<Facility> buildFacilities(ExportInventoryItemsInputModel inventoryItemsInput) {
-        List<String> facilityIds = Stream.of(inventoryItemsInput.getInventoryItems())
+
+        List<String> facilityIds = Stream
+            .of(inventoryItemsInput.getInventoryItems())
             .map(ExportInventoryItemInputModel::getFacilityId)
             .collect(Collectors.toList());
         return facilityRepo.findAllByFacilityIdIn(facilityIds);
@@ -413,90 +450,115 @@ public class InventoryItemServiceImpl implements InventoryItemService {
 
     @NotNull
     private Map<List<String>, OrderItem> buildOrderItemMap(ExportInventoryItemsInputModel inventoryItemsInput) {
+
         return orderItemRepo.findAllByOrderIdInAndOrderItemSeqIdIn(
-            Stream.of(inventoryItemsInput.getInventoryItems())
-                .map(ExportInventoryItemInputModel::getOrderId).distinct()
+            Stream
+                .of(inventoryItemsInput.getInventoryItems())
+                .map(ExportInventoryItemInputModel::getOrderId)
+                .distinct()
                 .collect(Collectors.toList()),
-            Stream.of(inventoryItemsInput.getInventoryItems())
-                .map(ExportInventoryItemInputModel::getOrderItemSeqId).distinct()
+            Stream
+                .of(inventoryItemsInput.getInventoryItems())
+                .map(ExportInventoryItemInputModel::getOrderItemSeqId)
+                .distinct()
                 .collect(Collectors.toList())
-        ).stream().collect(Collectors.toMap(orderItem -> Arrays.asList(orderItem.getOrderId(),
-            orderItem.getOrderItemSeqId()),
+        ).stream().collect(Collectors.toMap(
+            orderItem -> Arrays.asList(
+                orderItem.getOrderId(),
+                orderItem.getOrderItemSeqId()),
             orderItem -> orderItem));
     }
 
     @NotNull
-    private Map<List<String>, ProductFacility> getProductFacilityMap(List<Product> queryProducts,
-                                                                     List<Facility> queryFacilities) {
+    private Map<List<String>, ProductFacility> getProductFacilityMap(
+        List<Product> queryProducts,
+        List<Facility> queryFacilities) {
+
         return productFacilityRepo.findByProductIdInAndFacilityIdIn(
             queryProducts.stream().map(Product::getProductId).collect(Collectors.toList()),
             queryFacilities.stream().map(Facility::getFacilityId).collect(Collectors.toList())
-        ).stream().collect(Collectors.toMap(productFacility -> Arrays.asList(productFacility.getFacilityId(),
-            productFacility.getProductId()),
+        ).stream().collect(Collectors.toMap(
+            productFacility -> Arrays.asList(
+                productFacility.getFacilityId(),
+                productFacility.getProductId()),
             productFacility -> productFacility));
     }
 
     @NotNull
-    private Map<List<String>, List<InventoryItem>> getInventoryItemsMap(List<Product> queryProducts,
-                                                                        List<Facility> queryFacilities) {
+    private Map<List<String>, List<InventoryItem>> getInventoryItemsMap(
+        List<Product> queryProducts,
+        List<Facility> queryFacilities) {
+
         Map<List<String>, List<InventoryItem>> inventoryItemsMap = new HashMap<>();
         inventoryItemRepo.findAllByProductInAndFacilityInAndQuantityOnHandTotalGreaterThan(
             queryProducts, queryFacilities, 0).forEach(inventoryItem ->
-            inventoryItemsMap.computeIfAbsent(
-                Arrays.asList(inventoryItem.getFacility().getFacilityId(),
-                    inventoryItem.getProduct().getProductId()),
-                key -> new ArrayList<>())
-                .add(inventoryItem));
+                                                           inventoryItemsMap.computeIfAbsent(
+                                                               Arrays.asList(
+                                                                   inventoryItem.getFacility().getFacilityId(),
+                                                                   inventoryItem.getProduct().getProductId()),
+                                                               key -> new ArrayList<>()).add(inventoryItem));
         return inventoryItemsMap;
     }
 
     @Override
     public Page<InventoryModel.OrderHeader> getInventoryOrderHeaderPage(Pageable page) {
+
         return orderHeaderPageRepo.findAllByExportedFalse(page).map(OrderHeader::toOrderHeaderModel);
     }
 
     @Override
     public List<InventoryModel.OrderItem> getInventoryOrderHeaderDetail(String facilityId, String orderId) {
+
         List<OrderItem> orderItems = orderItemRepo.findAllByOrderId(orderId);
         return convertOrderItemToModel(facilityId, orderItems);
     }
 
     @NotNull
-    private List<InventoryModel.OrderItem> convertOrderItemToModel(String facilityId,
-                                                                   List<OrderItem> orderItems) {
+    private List<InventoryModel.OrderItem> convertOrderItemToModel(
+        String facilityId,
+        List<OrderItem> orderItems) {
+
         List<InventoryItemDetail> inventoryItemDetails = inventoryItemDetailRepo.findAllByOrderItemIn(orderItems);
         Map<String, Integer> exportedQuantityCounter = new HashMap<>();
         for (InventoryItemDetail inventoryItemDetail : inventoryItemDetails) {
-            exportedQuantityCounter.merge(inventoryItemDetail.getOrderItem().getOrderItemSeqId(),
+            exportedQuantityCounter.merge(
+                inventoryItemDetail.getOrderItem().getOrderItemSeqId(),
                 inventoryItemDetail.getQuantityOnHandDiff(),
                 Integer::sum);
         }
-        List<String> productIds = orderItems.stream()
+        List<String> productIds = orderItems
+            .stream()
             .map(orderItem -> orderItem.getProduct().getProductId())
             .distinct()
             .collect(Collectors.toList());
         Map<String, Integer> productFacilityCountMap;
         if (facilityId == null) {
-            productFacilityCountMap = productFacilityRepo.findAllByProductIdIn(productIds)
+            productFacilityCountMap = productFacilityRepo
+                .findAllByProductIdIn(productIds)
                 .stream()
-                .collect(Collectors.toMap(ProductFacility::getProductId,
+                .collect(Collectors.toMap(
+                    ProductFacility::getProductId,
                     ProductFacility::getLastInventoryCount,
                     Integer::sum));
         } else {
-            productFacilityCountMap = productFacilityRepo.findAllByFacilityIdAndProductIdIn(facilityId, productIds)
+            productFacilityCountMap = productFacilityRepo
+                .findAllByFacilityIdAndProductIdIn(facilityId, productIds)
                 .stream()
-                .collect(Collectors.toMap(ProductFacility::getProductId,
+                .collect(Collectors.toMap(
+                    ProductFacility::getProductId,
                     ProductFacility::getLastInventoryCount,
                     Integer::sum));
         }
         Map<OrderItem, Integer> orderItemInventoryQuantityMap = new HashMap<>();
         for (OrderItem orderItem : orderItems) {
-            orderItemInventoryQuantityMap.put(orderItem,
+            orderItemInventoryQuantityMap.put(
+                orderItem,
                 productFacilityCountMap.getOrDefault(orderItem.getProduct().getProductId(), 0));
         }
 
-        return orderItems.stream()
-//                .filter(orderItem -> orderItemInventoryQuantityMap.get(orderItem) > 0)
+        return orderItems
+            .stream()
+//            .filter(orderItem -> orderItemInventoryQuantityMap.get(orderItem) > 0)
             .map(orderItem -> orderItem.toOrderItemModel(
                 exportedQuantityCounter.getOrDefault(orderItem.getOrderItemSeqId(), 0),
                 orderItemInventoryQuantityMap.get(orderItem)))
@@ -505,25 +567,35 @@ public class InventoryItemServiceImpl implements InventoryItemService {
 
     @Override
     public List<InventoryModel.ExportDetail> getInventoryExportList(String facilityId) {
+
         List<ShipmentItem> shipmentItems = shipmentItemRepo.findAllByFacility(new Facility(facilityId));
-        List<InventoryItemDetail> inventoryItemDetails = inventoryItemDetailRepo.findAllByOrderItemIn(shipmentItems.stream()
-            .map(ShipmentItem::getOrderItem)
-            .collect(Collectors.toList()));
-        return inventoryItemDetails.stream()
+        List<InventoryItemDetail> inventoryItemDetails = inventoryItemDetailRepo.findAllByOrderItemIn(shipmentItems
+                                                                                                          .stream()
+                                                                                                          .map(
+                                                                                                              ShipmentItem::getOrderItem)
+                                                                                                          .collect(
+                                                                                                              Collectors
+                                                                                                                  .toList()));
+        return inventoryItemDetails
+            .stream()
             .map(InventoryItemDetail::toInventoryExportDetail)
             .collect(Collectors.toList());
     }
 
     @Override
     public List<InventoryModel.ProductFacility> getInventoryList(String facilityId) {
+
         Facility facility = facilityRepo.findById(facilityId).orElseThrow(NoSuchElementException::new);
         List<ProductFacility> productFacilities = productFacilityRepo.findAllByFacilityId(facilityId);
-        List<String> productIds = productFacilities.stream()
+        List<String> productIds = productFacilities
+            .stream()
             .map(ProductFacility::getProductId)
             .distinct()
             .collect(Collectors.toList());
 
-        Map<String, Product> productMap = productRepo.findAllByProductIdIn(productIds).stream()
+        Map<String, Product> productMap = productRepo
+            .findAllByProductIdIn(productIds)
+            .stream()
             .collect(Collectors.toMap(Product::getProductId, product -> product));
 
         return productFacilities.stream().map(productFacility -> new InventoryModel.ProductFacility(
